<resources>
    <string name="app_name">Labbaiik</string>
    <string name="e_fatwa">E-FATWA</string>
    <string name="login_text"><b>Welcome.</b> Login to your E-FATWA account with your mobile or email address.</string>
    <string name="register_now"><u><b>Register now!</b></u></string>
    <string name="category_name"><u>Category name</u></string>
    <string name="sign_in_back"><u><b>Sign in</b></u></string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="email_mobile_no">Mobile no or email</string>
    <string name="name_is_required">Name is required!</string>
    <string name="email_is_required">Email/Mobile no is required!</string>
    <string name="password_is_required">Password is required!</string>
    <string name="password_length">Min password length should be 6!</string>
    <string name="who_are_you">Who you are</string>
    <string name="user">User</string>
    <string name="todo">TODO</string>
    <string name="mufti">Mufti</string>
    <string name="please_sign_up_to_your_account">Please sign up to your account</string>
    <string name="name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="add_photo">Add photo</string>
    <string name="verification_code">Verification Code</string>
    <string name="we_will_send_you_a_verification_code">We will send you a verification code</string>
    <string name="didn_t_recieve_code">Didn\'t recieve code</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="continiue">Continue</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="questions">Questions</string>
    <string name="news_feed">News feed</string>
    <string name="videos">Videos</string>
    <string name="demo_ans"> <b>Answer: </b>is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</string>
    <string name="text_user">আপনি কি নানাবিধ ধর্মীয় প্রশ্নের সমাধান জানতে চাচ্ছেন? লাব্বাইক পরিবারের সাথে পথ চলতে চাইছেন একজন উৎসুক গ্রাহক হিসেবে? \n\nতাহলে এখনি Continue বাটনে ক্লিক করে একাউন্ট করে নিন।\n\nজাঝাকাল্লাহু খায়রান।</string>
    <string name="text_mufti">আপনি কি একজন মুহতারাম মুফতী? যে কোনো প্রশ্নের উত্তরে শরীয়াহ সম্মত সমাধান দিতে সক্ষম? ইসলামী বিধিমালা ও ফত্ওয়া সম্পর্কে সম্যক অবগত? দ্বীন ও জাতির খেদমতে আপনি নিয়োজিত হতে ইচ্ছুক?\n\nতাহলে এখনি Continue বাটনে ক্লিক করে একাউন্ট করে নিন।\n\nজাঝাকাল্লাহু খায়রান।</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome_text_user">Welcome to the Labbaik family. This is our organization to provide correct answers to all your questions about religion.</string>
    <string name="welcome_text_mufti">Your profile has been submitted &amp; will be reviewed by <font fgcolor='#00A99D'><u><b>Labbaiik</b></u> </font> team. You will be notified if any extra information is needed.</string>
    <string name="back_to_home">Back to home</string>
    <string name="next">Next</string>
    <string name="father_s_name_optional">Father\'s name (Optional)</string>
    <string name="gender_optional">Gender (Optional)</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="active_contact_number">Active contact number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="marital_status">Marital status</string>
    <string name="skip">Skip</string>
    <string name="meshkat">Meshkat</string>
    <string name="result">Result</string>
    <string name="year">year</string>
    <string name="create_an_account">Create an account !</string>
    <string name="signup_text">Enter your personal details and start your journey with <font fgcolor='#00A99D'><u><b>Labbaiik.com</b></u> </font></string>
    <string name="i_agree_with_the_terms_conditions">I agree with the <font fgcolor='#00A99D'><u><b>terms &amp; conditions</b></u> </font></string>
    <string name="upload_your_photo">Upload your photo</string>
    <string name="save">Save</string>
    <string name="congratulations">Congratulations!</string>
    <string name="powered_by_labbaiik_com">Powered by <font fgcolor='#00A99D'><u><b>Labbaiik.com</b></u> </font></string>
    <string name="are_you_mufti">Are you Mufti?</string>
    <string name="create">Create</string>
    <string name="details">Details</string>
    <string name="qualifications">Qualifications</string>
    <string name="institution_name">Institution name</string>
    <string name="introduce_your_self">Introduce your self</string>
    <string name="workplace_name">Workplace name</string>
    <string name="district">District</string>
    <string name="talimi_murabbi_name">Talimi Murabbi name</string>
    <string name="phone">Phone</string>
    <string name="experience_in_issuing_written_fatwas">Experience in issuing written fatwas</string>
    <string name="interested_category_for_answering">Interested category for answering</string>
    <string name="submit_to_review">Submit to review</string>
    <string name="choose_account_type">Choose account type:</string>
    <string name="for_user">For user</string>
    <string name="user_details">Do you want to know the solution of various religious questions?</string>
    <string name="mufti_details">Ready to give solutions according to Shariah of any question?</string>
    <string name="for_mufti">For Mufti</string>
    <string name="get_started">Get Started</string>
    <string name="ask_your_questions_anytime">Ask your questions anytime</string>
    <string name="demo_text">Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley.</string>
    <string name="prayer_time_schedule">Prayer time schedule</string>
    <string name="also_many_other_features">Also many other features</string>
    <string name="edit_profile">Edit profile</string>
    <string name="public_question">Public question</string>
    <string name="private_question">Private question</string>
    <string name="total_question"><u>Total Question</u></string>
    <string name="answered"><u>Answered</u></string>
    <string name="pending"><u>Pending</u></string>
    <string name="all_question">All Questions</string>
    <string name="saved_questions">Saved Questions</string>
    <string name="correction_req">Correction req.</string>
    <string name="sign_out">Sign out</string>
    <string name="ask_question">Ask question</string>
    <string name="what_correction_to_do">What correction to do?</string>
    <string name="your_question">Your Question:</string>
    <string name="update">Update</string>
    <string name="back">Back</string>
    <string name="answered_tv">Answered</string>
    <string name="pending_questions">Pending Questions</string>
    <string name="personal_info">Personal Info.</string>
    <string name="edit">Edit</string>
    <string name="last_update_your_password_2_months_ago">Last update your password 2 months ago.</string>
    <string name="next_prayer">পরবর্তী নামায:</string>
    <string name="namaz">নামায</string>
    <string name="prayer_time">Prayer Time</string>
    <string name="holy_quran">Holy Quran</string>
    <string name="dua">Dua</string>
    <string name="calendar">Calendar</string>
    <string name="donate">Donate</string>
    <string name="about_us">About us</string>
    <string name="share">Share</string>
    <string name="connection">Connection</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="now">Now :</string>
    <string name="remaining">Remaining</string>
    <string name="method_of_fixing_prayer_time">Method of fixing prayer time</string>
    <string name="why_is_prayer_prohibited">Why is prayer prohibited?</string>
    <string name="masnun_dua">Masnun Dua</string>
    <string name="also_find_us_on">Also find us on</string>
    <string name="watch_videos">Watch videos</string>
    <string name="next_oakto">পরবর্তী ওয়াক্ত:</string>
    <string name="save_this_post">Save this post</string>
    <string name="copy_link">Copy Link</string>
    <string name="report_to_mufti_name">Report to Mufti Name</string>
    <string name="report_to_labbaiik_team">Report to <b>Labbaiik</b> team</string>
    <string name="report">Report</string>
    <string name="please_select_a_problem">Please select a problem</string>
    <string name="help_us_understand_what_s_happening_with_this_post_how_would_you_describe_it">Help us understand what\'s happening with this post. How would you describe it?</string>
    <string name="submit">Submit</string>
    <string name="your_report_has_been_received_stay_with_labbaiik">Your report has been received. Stay with <font fgcolor='#00A99D'><u><b>Labbaiik</b></u> </font></string>
    <string name="private_question_text">If you feel that the wider Muslim Ummah could benefit from any of your questions, we encourage you to keep your question public for their benefit. Yes, you should make the question private only if the question involves your personal information and special secrets, which you are not interested in sharing with anyone else. The <font fgcolor='#00A99D'><b>Labbaiik team</b> </font> believes in protecting everyone\'s privacy and dignity.</string>
    <string name="public_question_text">If you feel that the larger Muslim Ummah could benefit from any of your questions, we encourage you to keep your question public for their benefit.</string>
    <string name="select_the_category_of_the_question">Select the category of the question</string>
    <string name="tap_to_select_that_match_your_category">Tap to select that match your category</string>
    <string name="write_your_question_in_details">Write your question in details...</string>
    <string name="submit_to_answer">Submit to answer</string>
    <string name="donate_here_to_improve_the_app">Donate here to improve the app</string>
    <string name="ask_question_confirmation"><b>Thank you for asking an excellent question.</b>\nYour query has been handed over to our experienced mufti panel. Very soon we will try to give you a rich answer to your question based on the Qur\'an and Hadith, insha\'Allah.\n\n Hope to stay with <font fgcolor='#00A99D'><b><u>Labbaiik.</u></b> </font></string>
    <string name="more">More</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="theme">Theme</string>
    <string name="location">Location</string>
    <string name="general_settings">General settings</string>
    <string name="terms_condition"><![CDATA[Terms & Condition]]></string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="feedback">Feedback</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="choose_a_theme">Choose a theme</string>
    <string name="we_highly_recommended_you_to_use_automatic_mode">We highly recommended you to use automatic mode</string>
    <string name="change_language">Change language</string>
    <string name="choose_a_language">Choose a language</string>
    <string name="bangla">বাংলা</string>
    <string name="english">English</string>
</resources>