<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".view.fragments.more.ThemeFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:background="@color/toolbar_color">


            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/previous" />

            <TextView
                android:id="@+id/toolbarTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/theme"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/choose_a_theme"
                android:textColor="@color/textColor_primary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/we_highly_recommended_you_to_use_automatic_mode"
                android:textColor="@color/textColor_primary"
                android:textSize="12sp"/>



            <RadioGroup
                android:id="@+id/theme_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:background="@drawable/radio_flat_regular"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="1dp">


                <RadioButton
                    android:id="@+id/radio_theme_light"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@android:color/transparent"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/light"
                    android:textColor="@color/input_text_color_profile"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radio_theme_dark"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/dark"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </RadioGroup>

        </LinearLayout>


    </RelativeLayout>
</layout>
