<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/selection_account_bg"
    android:orientation="vertical"
    android:padding="15dp">

    <View
        android:layout_width="110dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/selection_account_bg_line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/choose_account_type"
        android:textColor="@color/selection_account_text_color"
        android:textSize="14sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:backgroundTint="@color/selection_account_card_bg"
            android:id="@+id/user_card"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="10dp"
            android:checkable="true"
            android:clickable="true"
            android:elevation="0dp"
            android:focusable="true"
            app:cardCornerRadius="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp">

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/for_user" />

                <TextView
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/textColor_primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/for_user"/>
                <TextView
                    android:gravity="center"
                    android:textSize="8sp"
                    android:textColor="@color/textColor_primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_details"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:backgroundTint="@color/selection_account_card_bg"
            android:id="@+id/mufti_card"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:checkable="true"
            android:clickable="true"
            android:elevation="0dp"
            android:focusable="true"
            app:cardCornerRadius="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp">

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/for_mufti" />

                <TextView
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/textColor_primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/for_mufti"/>
                <TextView
                    android:gravity="center"
                    android:textSize="8sp"
                    android:textColor="@color/textColor_primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mufti_details"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_gravity="center_horizontal"
        android:id="@+id/btn_continue"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/selection_account_button_bg"
        android:padding="10dp"
        android:text="@string/continiue"
        android:textColor="@color/selection_account_button_text_color"
        android:textFontWeight="600"
        android:textSize="14sp"
        app:cornerRadius="30dp" />


</LinearLayout>
