<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.authentication.OtpVerificationActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="120dp"
            android:text="@string/app_name"
            android:textColor="@color/textColor_black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_verify" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="8dp"
                android:text="@string/verification_code"
                android:textColor="@color/textColor_1"
                android:textFontWeight="500"
                android:textSize="26sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/we_will_send_you_a_verification_code"
            android:textColor="@color/textColor_1"
            android:textSize="14dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/otp_1"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:background="@drawable/otp_background"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:paddingTop="6dp"
                android:textColor="@color/theme_color"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/otp_2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:background="@drawable/otp_background"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:paddingTop="6dp"
                android:textColor="@color/theme_color"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/otp_3"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:background="@drawable/otp_background"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:paddingTop="6dp"
                android:textColor="@color/theme_color"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/otp_4"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:background="@drawable/otp_background"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:paddingTop="6dp"
                android:textColor="@color/theme_color"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/didn_t_recieve_code"
            android:textColor="@color/textColor_1"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/btn_resend_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/resend_otp"
            android:textColor="@color/theme_color"
            android:textFontWeight="600"
            android:textSize="12dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continiue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:text="@string/continiue"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textFontWeight="600"
            android:textSize="18dp"
            app:cornerRadius="10dp" />

    </LinearLayout>
</layout>
